// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChildBlockHooks should match snapshot 1`] = `
<InnerBlocks
  template={
    Array [
      Array [
        "tribe/event-datetime",
        Object {},
      ],
      Array [
        "tribe/event-pro-recurring",
        Object {},
      ],
      Array [
        "tribe/event-pro-exclusion",
        Object {},
      ],
    ]
  }
/>
`;

exports[`ChildBlockHooks should only render events templates 1`] = `
<InnerBlocks
  template={
    Array [
      Array [
        "tribe/event-datetime",
        Object {},
      ],
    ]
  }
/>
`;

exports[`ChildBlockHooks should only render events-pro templates 1`] = `
<InnerBlocks
  template={
    Array [
      Array [
        "tribe/event-datetime",
        Object {},
      ],
      Array [
        "tribe/event-pro-recurring",
        Object {},
      ],
      Array [
        "tribe/event-pro-exclusion",
        Object {},
      ],
    ]
  }
/>
`;
